--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,20 @@
 {
   "manifest_version": 3,
   "name": "Unacademy Watermark Remover",
-  "version": "1.0",
-  "description": "Remove account watermark from Unacademy hosted videos",
+  "version": "1.0.1",
+  "description": "Remove annoying account watermark from Unacademy hosted videos",
   "permissions": [
     "activeTab"
   ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "dummy@abc.com",
+      "strict_min_version": "80.0"
+    },
+    "gecko_android": {
+      "strict_min_version": "80.0"
+    }
+  },
   "content_scripts": [
     {
       "matches": [
